--- a/resume/templates/index.html
+++ b/resume/templates/index.html
@@ -45,4 +45,24 @@
 	</header>
 	<!-- End Header Area -->
 
+	<!-- Slider Area -->
+	<section id="slider" class="slider" style="background-image:url('{% static 'img/slider.jpg' %}')">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-7 col-sm-12 col-xs-12">
+					<div class="text">
+						<h1>Hi,my name is Abhimanyu Kumar</h1>
+						<p>Lorem Ipsum Dolor Sit Amet, Consectetur Adipisicing Elit. Hic Laboriosam Ipsa Sequi? Laudantium Aspernatur Iusto Blanditiis, Totam Perferendis Dicta Magni. tincidunt dui. Vestibulum sodales posuere ullamcorper. Proin convallis neque pulvinar mauris vehicula, quis dictum diam ullamcorper</p>
+						<div class="button">
+							<a href="#" class="btn primary "><i class="fa fa-briefcase"></i>view work</a>
+							<a href="#" class="btn"><i class="fa fa-phone"></i>Contact me</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+		<!--/ End Slider Area -->
+		
+
 {% endblock %}
