Added Education and experience section

--- a/resume/templates/resume/index.html
+++ b/resume/templates/resume/index.html
@@ -35,42 +35,78 @@
             <h2 class="mb-5">Experience</h2>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Senior Web Developer</h3>
-                    <div class="subheading mb-3">Intelitec Solutions</div>
-                    <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                    <h3 class="mb-0">Research Scientist, Level C</h3>
+                    <div class="subheading mb-3">Defence Research & Development Organisation, Hyderabad</div>
+                    <ul>
+                        <li>
+                            Research and characterising the sensors for different input parameters (features).  Analysis of navigation data with different Machine Learning algorithm and choosing appropriate algorithm.
+                        </li>
+                        <li>
+                            Collecting data from primary and secondary sources, interpreting data using statistical techniques and modelling Gyroscope and Accelerometer sensors to reduce the sensors error contribution less than 5 mtrs.
+                        </li>
+                        <li>
+                            Designed and implemented navigation software and achieved 70% accuracy in position.
+                        </li>
+                        <li>
+                            Implemented 1553B MIL-STD communication interface using DDC SDK and C++, reduced the software test setup time by 50% and hence increasing the productivity.
+                        </li>
+
+                    </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">March 2013 - Present</span>
+                    <span class="text-primary">July 2016 - Present</span>
                 </div>
             </div>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Web Developer</h3>
-                    <div class="subheading mb-3">Intelitec Solutions</div>
-                    <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                    <h3 class="mb-0">Research Scientist, Level B</h3>
+                    <div class="subheading mb-3">Defence Research & Development Organisation, Hyderabad</div>
+                    <ul>
+                        <li>
+                            Wrote Python software to automate document generation and reduced the software certification time by 50%. Designed and developed navigation software in embedded C for 3 weapons and consistently achieved the accuracy of less than 30m in 6 trials conducted.
+                        </li>
+                        <li>
+                            Designed modular software for INS system, emphasising the MVC architecture and reduced software testing time by 50%.
+                        </li>
+                        <li>
+                            Reduced the CPU load by 20% by modularising and optimising code.
+                        </li>
+                        <li>
+                            Designed and implemented automated test cases addressing areas failure handling, reliability, errors/bugs finding, core functionality etc.
+                        </li>
+                        <li>
+                            Conducted basic and applied research on Gyroscope and Accelerometer sensors.
+                        </li>
+                        <li>
+                            Developed test tool and GUI based data logging software written in QT C++ to carry out unit level testing and ease the testing procedure.
+                        </li>
+                    </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">December 2011 - March 2013</span>
+                    <span class="text-primary">August 2013 - June 2016</span>
                 </div>
             </div>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Junior Web Designer</h3>
-                    <div class="subheading mb-3">Shout! Media Productions</div>
-                    <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                    <h3 class="mb-0">Software Developer, Intern</h3>
+                    <div class="subheading mb-3">Nucleus Software Exports Ltd. – Noida, Uttar Pradesh, India</div>
+                    <ul>
+                        <li>
+                            Implemented data parser to acquire and store Facebook data into database.
+                        </li>
+                        <li>
+                            Wrote Java servlets using Stanford Corenlp Library and JDBC to perform Sentiment Analysis.
+                        </li>
+                        <li>
+                            Achieved an accuracy of 80% on test data after implementing Naive Bayes Algorithm.
+                        </li>
+                        <li>
+                            Wrote maintainable and extensible code in team environment.
+                        </li>
+                    </ul>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">July 2010 - December 2011</span>
-                </div>
-            </div>
-            <div class="resume-item d-flex flex-column flex-md-row">
-                <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Web Design Intern</h3>
-                    <div class="subheading mb-3">Shout! Media Productions</div>
-                    <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">September 2008 - June 2010</span>
+                    <span class="text-primary">June 2012 - July 2012</span>
                 </div>
             </div>
         </div>
@@ -81,23 +117,35 @@
             <h2 class="mb-5">Education</h2>
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">University of Colorado Boulder</h3>
-                    <div class="subheading mb-3">Bachelor of Science</div>
-                    <div>Computer Science - Web Development Track</div>
-                    <p>GPA: 3.23</p>
+                    <h3 class="mb-0">Indian Institute of Technology, Mandi</h3>
+                    <div class="subheading mb-3">Bachelor of Technology</div>
+                    <div>Computer Science & Engineering</div>
+                    <p>CGPA: 7.58</p>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2006 - May 2010</span>
+                    <span class="text-primary">June 2009 - May 2013</span>
                 </div>
             </div>
             <div class="resume-item d-flex flex-column flex-md-row">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">James Buchanan High School</h3>
-                    <div class="subheading mb-3">Technology Magnet Program</div>
-                    <p>GPA: 3.56</p>
+                    <h3 class="mb-0">T.P.S. College, Patna</h3>
+                    <div class="subheading mb-3">Intermediate</div>
+                    <div>Mathematics, Physics, Chemistry</div>
+                    <p>Percentage: 70</p>
                 </div>
                 <div class="resume-date text-md-right">
-                    <span class="text-primary">August 2002 - May 2006</span>
+                    <span class="text-primary">May 2006 - May 2008</span>
+                </div>
+            </div>
+            <div class="resume-item d-flex flex-column flex-md-row">
+                <div class="resume-content mr-auto">
+                    <h3 class="mb-0">N.M. High School, Gangaur, Madhubani</h3>
+                    <div class="subheading mb-3">10th</div>
+                    <div>Mathematics, Physics, Chemistry</div>
+                    <p>Percentage: 78</p>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">March 2005 - March 2006</span>
                 </div>
             </div>
         </div>
